--- a/index.html
+++ b/index.html
@@ -1,19 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en" data-theme="light">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Creatives-Idea</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-<!-- header -->
- <header>
-
- </header>
-<!-- main -->
- <main></main>
- <!-- footer -->
-  <footer></footer>
-</body>
+    <link rel="stylesheet" href="main.css" />
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      .plus {
+        font-family: "Plus Jakarta Sans", sans-serif;
+      }
+    </style>
+    <!-- /* daisy ui component link */ -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="font-[plus]">
+    <!-- header -->
+    <header class="container mx-auto">
+      <!-- navbar section -->
+      <nav>
+        <div class="navbar bg-base-100">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+              >
+                <li><a>Home</a></li>
+                <li class="text-[#F44335]"><a>About us</a></li>
+                <li><a>Upskils</a></li>
+                <li><a>Contact us</a></li>
+              </ul>
+            </div>
+            <a class="hover:scale-105 duration-300 text-xl"
+              ><img src="assets/c4u full logo_2022 1.png" alt="web-logo"
+            /></a>
+          </div>
+          <div class="navbar-center hidden lg:flex">
+            <ul class="menu menu-horizontal px-1">
+              <li><a>Home</a></li>
+              <li class="text-[#F44335]"><a>About us</a></li>
+              <li><a>Upskils</a></li>
+              <li><a>Contact us</a></li>
+            </ul>
+          </div>
+          <div class="navbar-end">
+            <a class="btn bg-[#F44335] text-white hover:bg-[#e3726a]">Register Interest</a>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- main -->
+    <main></main>
+    <!-- footer -->
+    <footer></footer>
+  </body>
 </html>
