added this profession section

--- a/index.html
+++ b/index.html
@@ -115,6 +115,63 @@
           </div>
         </div>
       </section>
+      <!-- profession section -->
+      <section
+        class="container mx-auto mt-5 md:mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-3 items-center justify-center"
+      >
+        <div class="mt-5 m-3 md:m-2">
+          <h2 class="font-bold text-4xl font-[plus] text-[#2D3142]">
+            At
+            <span class="text-[#F44335] underline underline-offset-2">C4U</span
+            >, <br />
+            We Empower:
+          </h2>
+        </div>
+        <div class="card">
+          <div>
+            <img
+              src="assets/37.png"
+              alt="badge"
+              class="bg-white p-1 rounded-full"
+            />
+          </div>
+          <h3 class="font-bold text-[18px] text-white">Students</h3>
+          <p class="font-[14px] text-white">
+            We help students find their way in a fast-evolving world by creating
+            a personalised learning journey guaranteed to help stand out in a
+            crowded job market.
+          </p>
+        </div>
+        <div class="card">
+          <div>
+            <img
+              src="assets/univarsity.png"
+              alt="badge"
+              class="bg-white p-1 rounded-full"
+            />
+          </div>
+          <h3 class="font-bold text-[18px] text-white">Universities</h3>
+          <p class="font-[14px] text-white">
+            We help your emerging talent to unlock their full potential by
+            combining education and work to create future-ready employees
+          </p>
+        </div>
+        <div class="card">
+          <div>
+            <img
+              src="assets/univarsity.png"
+              alt="badge"
+              class="bg-white p-1 rounded-full"
+            />
+          </div>
+          <h3 class="font-bold text-[18px] text-white">Businesses</h3>
+          <p class="font-[14px] text-white">
+            We enable businesses to tap into the diverse pool of emerging talent
+            cultivated by universities. To co-create the future workforce and
+            revitalise the business world.
+          </p>
+        </div>
+      </section>
     </main>
     <!-- footer -->
     <footer></footer>
