added this hero section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- header -->
     <header class="container mx-auto">
       <!-- navbar section -->
-      <nav>
+      <nav class="shadow-md">
         <div class="navbar bg-base-100">
           <div class="navbar-start">
             <div class="dropdown">
@@ -72,13 +72,50 @@
             </ul>
           </div>
           <div class="navbar-end">
-            <a class="btn bg-[#F44335] text-white hover:bg-[#e3726a]">Register Interest</a>
+            <a class="btn bg-[#F44335] text-white hover:bg-[#e3726a]"
+              >Register Interest</a
+            >
           </div>
         </div>
       </nav>
     </header>
     <!-- main -->
-    <main></main>
+    <main>
+      <!-- hero section -->
+      <section class="container mx-auto">
+        <div
+          class="hero min-h-screen"
+          style="background-image: url(assets/hero-img.png)"
+        >
+          <div class="hero-content text-center">
+            <div class="max-w-md">
+              <h3 class="font-bold text-lg text-white">
+                Discover
+                <span class="text-[#F44335] font-extrabold"> -</span>
+                Interact
+                <span class="text-[#F44335] font-extrabold"> -</span>
+                Engage
+              </h3>
+              <h1 class="text-5xl font-bold text-white md:mt-3 mt-2">
+                Connecting
+                <span class="text-[#F44335] underline underline-offset-4"
+                  >talent</span
+                >
+                to opportunity through skills
+              </h1>
+              <p class="py-6 text-[#FAFAFA] text-[20px]">
+                We forster a skill-focussed environment enabling students to
+                navigate their career with their self-paced learning journey and
+                businesses to gain market-ready talent.
+              </p>
+              <button class="btn text-[#F44335] rounded-full">
+                Ask questions
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- footer -->
     <footer></footer>
   </body>
