--- a/index.html
+++ b/index.html
@@ -172,6 +172,90 @@
           </p>
         </div>
       </section>
+      <!-- mission section -->
+      <section class="bg-[#F5F5F5]">
+        <section
+          class="container mx-auto mt-5 md:mt-44 md:flex gap-6 p-3 md:p-2"
+        >
+          <div>
+            <div class="">
+              <h4 class="text-sm text-[#FC5A5A]">About us</h4>
+              <div class="p-3">
+                <h2 class="text-4xl font-semibold">Our Mission</h2>
+                <p class="mt-4 md:mt-10 w-full md:w-[438px]">
+                  To create a personalised pathway for continuous learning and
+                  transferrable skills development.
+                </p>
+              </div>
+              <button
+                class="btn border-[#FC5A5A] rounded-full font-bold text-[#FC5A5A] mt-10"
+              >
+                Find our mind
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div class="mt-5 md:mt-96">
+              <img
+                src="assets/mission.png"
+                alt=""
+                class="hidden md:inline-block"
+              />
+            </div>
+          </div>
+
+          <div class="hidden md:block">
+            <img src="assets/Line and circle content.png" alt="" />
+          </div>
+
+          <div>
+            <div class="">
+              <img src="assets/vision.png" alt="" />
+            </div>
+            <div class="mt-5 md:mt-52">
+              <h4 class="text-sm text-[#FC5A5A] mt-5 md:mt-5">About us</h4>
+              <div class="p-3">
+                <h2 class="text-4xl font-semibold">Our Vision</h2>
+                <p class="mt-4">
+                  To have a globally recognised strategic bridge between
+                  education and the job market
+                </p>
+              </div>
+              <button
+                class="btn border-[#FC5A5A] rounded-full font-bold text-[#FC5A5A] mt-10"
+              >
+                Contact us
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </section>
+      </section>
     </main>
     <!-- footer -->
     <footer></footer>
