added this engagin section

--- a/index.html
+++ b/index.html
@@ -256,6 +256,60 @@
           </div>
         </section>
       </section>
+      <!-- Engagin section -->
+      <section
+        class="container mx-auto mt-5 md:mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-3 md:p-2"
+      >
+        <div class="card-one">
+          <div class="flex">
+            <div>
+              <div class="">
+                <img src="assets/Group 199.png" alt="" />
+              </div>
+              <div>
+                <h3 class="text-2xl font-semibold">Discover</h3>
+                <p class="text-[#757095] text-sm font-medium mt-4">
+                  We uncover students unique skills to stand out in a crowded
+                  job market
+                </p>
+              </div>
+            </div>
+            <div><img src="assets/1.png" alt="" /></div>
+          </div>
+        </div>
+
+        <div class="card-one">
+          <div class="flex">
+            <div>
+              <div><img src="assets/Group 199 (1).png" alt="" /></div>
+              <div>
+                <h3 class="text-2xl font-semibold">Interact</h3>
+                <p class="text-[#757095] text-sm font-medium mt-4">
+                  We open doors to new opportunities by expanding your
+                  transferrable skills
+                </p>
+              </div>
+            </div>
+            <div><img src="assets/2.png" alt="" /></div>
+          </div>
+        </div>
+
+        <div class="card-one">
+          <div class="flex">
+            <div>
+              <div><img src="assets/Group 199 (2).png" alt="" /></div>
+              <div>
+                <h3 class="text-2xl font-semibold">Engage</h3>
+                <p class="text-[#757095] text-sm font-medium mt-4">
+                  To forester a skill focussed environment that enable students
+                  to navigate their ideal career
+                </p>
+              </div>
+            </div>
+            <div><img src="assets/3.png" alt="" /></div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer -->
     <footer></footer>
