--- a/index.html
+++ b/index.html
@@ -310,6 +310,42 @@
           </div>
         </div>
       </section>
+      <!-- team section -->
+      <section
+        class=""
+        style="background-image: url('/assets/Rectangle\ 32.png')"
+      >
+        <div class="container mx-auto pt-5 md:pt-20">
+          <div class="flex top-10">
+            <div>
+              <h3 class="text-4xl font-semibold">
+                The Creative Team <br />
+                behind <span class="text-[#F44335]">the door</span>
+              </h3>
+            </div>
+            <div><img src="assets/Arrow_10.png" alt="" /></div>
+          </div>
+        </div>
+        <!-- card -->
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 container mx-auto"
+        >
+          <div class="shadow-xl flex items-center justify-center p-5">
+            <div>
+              <img src="assets/image 3.png" alt="" />
+              <h3 class="font-bold text-2xl mt-5">Ekta Mahajan</h3>
+              <p class="text-sm text-gray-500 p-3">Founder & C.E.O</p>
+              <div class="flex gap-3 items-center p-2">
+                <img src="assets/phone.png" alt="" />
+                <img src="assets/message.png" alt="" />
+                <img src="assets/linkdine.png" alt="" />
+              </div>
+            </div>
+          </div>
+
+      
+        </div>
+      </section>
     </main>
     <!-- footer -->
     <footer></footer>
