added this team two

--- a/index.html
+++ b/index.html
@@ -342,8 +342,19 @@
               </div>
             </div>
           </div>
+          <div class="shadow-xl flex items-center justify-center p-5">
+            <div>
+              <img src="assets/image 4.png" alt="" />
+              <h3 class="font-bold text-2xl mt-5">Toby Potter-Drake</h3>
+              <p class="text-sm text-gray-500 p-3">Product Manager Associate</p>
+              <div class="flex gap-3 items-center p-2">
+                <img src="assets/phone.png" alt="" />
+                <img src="assets/message.png" alt="" />
+                <img src="assets/linkdine.png" alt="" />
+              </div>
+            </div>
+          </div>
 
-      
         </div>
       </section>
     </main>
