added this team all card section done

--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@
         </div>
         <!-- card -->
         <div
-          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 container mx-auto"
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 container mx-auto"
         >
-          <div class="shadow-xl flex items-center justify-center p-5">
+          <div class="card-two">
             <div>
               <img src="assets/image 3.png" alt="" />
               <h3 class="font-bold text-2xl mt-5">Ekta Mahajan</h3>
@@ -342,7 +342,7 @@
               </div>
             </div>
           </div>
-          <div class="shadow-xl flex items-center justify-center p-5">
+          <div class="card-two">
             <div>
               <img src="assets/image 4.png" alt="" />
               <h3 class="font-bold text-2xl mt-5">Toby Potter-Drake</h3>
@@ -356,7 +356,7 @@
           </div>
 
 
-          <div class="shadow-xl flex items-center justify-center p-5">
+          <div class="card-two">
             <div>
               <img src="assets/image 2.png" alt="" />
               <h3 class="font-bold text-2xl mt-5">Ross Davies</h3>
@@ -369,6 +369,18 @@
             </div>
           </div>
 
+          <div class="card-two">
+            <div>
+              <img src="assets/image 1.png" alt="" />
+              <h3 class="font-bold text-2xl mt-5">Leo crozier</h3>
+              <p class="text-sm text-gray-500 p-3">Software Developer</p>
+              <div class="flex gap-3 items-center p-2">
+                <img src="assets/phone.png" alt="" />
+                <img src="assets/message.png" alt="" />
+                <img src="assets/linkdine.png" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
