fadded this footer section

--- a/index.html
+++ b/index.html
@@ -385,6 +385,53 @@
       </section>
     </main>
     <!-- footer -->
-    <footer></footer>
+    <footer class="container mx-auto mt-5 md:mt-20">
+      <footer class="footer bg-base-200 text-base-content p-10">
+        <aside>
+      <img src="assets/c4u full logo_2022 1.png" alt="">
+          <p class="text-[#20484F]">
+            Level39 <br>
+            One Canada Square, <br>
+            Canary Wharf,<br>
+            London, <br>
+            E14 5AB
+          </p>
+        </aside>
+        <nav  class="text-[#20484F]">
+          <h6 class="footer-title">Home</h6>
+          <a class="link link-hover">Collaborations</a>
+          <a class="link link-hover">Statistics</a>
+          <a class="link link-hover">How It Works </a>
+          <a class="link link-hover">Testimonials </a>
+        </nav>
+        <nav  class="text-[#20484F]">
+          <h6 class="footer-title">About Us</h6>
+          <a class="link link-hover">Who We Are</a>
+          <a class="link link-hover">Mission statement </a>
+          <a class="link link-hover">Our Vision </a>
+          <a class="link link-hover">The team</a>
+        </nav>
+        <nav  class="text-[#20484F]">
+          <h6 class="footer-title">Upskill</h6>
+          <a class="link link-hover">It Support </a>
+          <a class="link link-hover">Project Managment </a>
+          <a class="link link-hover">Data Analysts</a>
+          <a class="link link-hover">Ux Design</a>
+        </nav>
+        <nav  class="text-[#20484F]">
+          <h6 class="footer-title">Contact Us </h6>
+          <a class="link link-hover">Your message </a>
+          <a class="link link-hover">E-mail</a>
+          <a class="link link-hover">Phone number</a>
+          <a class="link link-hover">LInkdin</a>
+        </nav>
+      </footer>
+      
+      <footer class="footer footer-center bg-base-300 text-base-content p-4">
+        <aside>
+          <p class="text-[14px]">Copyright 2022 Creatives For You LTD</p>
+        </aside>
+      </footer>
+    </footer>
   </body>
 </html>
