added this fav-icon

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         font-family: "Plus Jakarta Sans", sans-serif;
       }
     </style>
+    <!-- fav-icon -->
+    <link rel="icon" type="image/x-icon" href="assets/fav-icon.JPG">
     <!-- /* daisy ui component link */ -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css"
@@ -312,7 +314,7 @@
       </section>
       <!-- team section -->
       <section
-        class=""
+        class=" p-3 md:p-2"
         style="background-image: url('/assets/Rectangle\ 32.png')"
       >
         <div class="container mx-auto pt-5 md:pt-20">
@@ -426,7 +428,7 @@
           <a class="link link-hover">LInkdin</a>
         </nav>
       </footer>
-      
+
       <footer class="footer footer-center bg-base-300 text-base-content p-4">
         <aside>
           <p class="text-[14px]">Copyright 2022 Creatives For You LTD</p>
