added this arrow fiction

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
     <!-- main -->
     <main>
       <!-- hero section -->
-      <section class="container mx-auto">
+      <section class="">
         <div
-          class="hero min-h-screen"
+          class="hero min-h-screen rounded-b-[20%] w-screen"
           style="background-image: url(assets/hero-img.png)"
         >
           <div class="hero-content text-center">
@@ -330,7 +330,7 @@
         </div>
         <!-- card -->
         <div
-          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 container mx-auto"
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 container mx-auto mt-4"
         >
           <div class="card-two">
             <div>
